fix navigation link on small devices

--- a/_sass/_dekyll.scss
+++ b/_sass/_dekyll.scss
@@ -149,6 +149,10 @@ ul.share-buttons li {
   font-size: 22px;
 }
 
+.site-nav {
+  z-index: 1;
+}
+
 .site-nav .page-link {
   font-size: 18px;
 }
